feat: add course

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <ul>
                         <li>Learn.JavaScript</li>
                         <li>CS50</li>
+                        <li>MDN</li>
                         <li>Stepik</li>
                         <li>Dualingo</li>
                     </ul>
